@@ -2,7 +2,7 @@
 //
 // Pairlist.h: Rcpp R/C++ interface class library -- pair lists objects (LISTSXP)
 //
-// Copyright (C) 2010 - 2013 Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2010 - 2025 Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -42,14 +42,11 @@ namespace Rcpp{
         Pairlist_Impl(SEXP x){
             Storage::set__(r_cast<LISTSXP>(x)) ;
         }
-        #if defined(HAS_VARIADIC_TEMPLATES)
-            template <typename... T>
-            Pairlist_Impl(const T&... args ){
-                Storage::set__(pairlist(args... )) ;
-            }
-        #else
-            #include <Rcpp/generated/Pairlist__ctors.h>
-        #endif
+        template <typename... T>
+        Pairlist_Impl(const T&... args ){
+            Storage::set__(pairlist(args... )) ;
+        }
+
         void update(SEXP x) {
             if (TYPEOF(x) != LISTSXP) {
                 Storage::set__(r_cast<LISTSXP>(x));
